--- a/Mod_2_css/external-css.html
+++ b/Mod_2_css/external-css.html
@@ -13,16 +13,18 @@
 <body>
     <header class="header">
         <h1 class="page-title">Welcome to Css World</h1>
-        
+
     </header>
-    
+
     <div class="blog">
         <h3>My first Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, obcaecati voluptate? Tenetur vitae blanditiis,
-            harum quae et necessitatibus,<strong> nesciunt explicabo perspiciatis</strong> labore minima inventore unde minus! Adipisci,
+            harum quae et necessitatibus,<strong> nesciunt explicabo perspiciatis</strong> labore minima inventore unde
+            minus! Adipisci,
             beatae! Iste cumque accusamus facere eligendi. Reiciendis iure repellat numquam quo, nobis quibusdam
             ratione, magnam eos harum blanditiis debitis iste id? Maiores officia perferendis soluta delectus ipsa quasi
-            exercitationem laboriosam corrupti recusandae et!accusamus <a href="https://web.programming-hero.com/">visit our sites</a></p>
+            exercitationem laboriosam corrupti recusandae et!accusamus <a href="https://web.programming-hero.com/">visit
+                our sites</a></p>
 
     </div>
 
